--- a/locale/fa/LC_MESSAGES/django.po
+++ b/locale/fa/LC_MESSAGES/django.po
@@ -1370,7 +1370,7 @@ msgstr " ایمیل"
 
 #: .\store\models.py:116
 msgid "Contact"
-msgstr "تماس"
+msgstr "تلفن تماس"
 
 #: .\store\models.py:117 .\ui\templates\order-registered-details.html:18
 msgid "Address"
